// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Stepper input matches snapshot (disabled) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-left: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 1;
}

.c4:hover:not(:disabled) {
  background: #DBDEE1;
}

.c4:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c4:focus-visible {
  z-index: 3;
}

.c4 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c6:hover:not(:disabled) {
  background: #DBDEE1;
}

.c6:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c6:focus-visible {
  z-index: 3;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  --stepper-segment-background-color: #FFFFFF;
  --stepper-segment-border-color: #B7BBC2;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  isolation: isolate;
  max-width: 100%;
  vertical-align: top;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c5 {
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius-none,0);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: left;
  width: 3rem;
  z-index: 2;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5[type='number'] {
  -moz-appearance: textfield;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c5:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c5:read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0 "
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    aria-labelledby="uuid1_label"
    class="c3"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c4"
      data-testid="stepper-button-decrement"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <input
      aria-invalid="false"
      class="c5"
      data-testid="stepper-input"
      disabled=""
      id="uuid1"
      type="number"
      value=""
    />
    <button
      aria-label="Increase number"
      class="c6"
      data-testid="stepper-button-increment"
      disabled=""
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (error) 1`] = `
.c3 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.25rem;
}

.c4 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  position: relative;
  border-left: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 3;
}

.c6:hover:not(:disabled) {
  background: #DBDEE1;
}

.c6:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c6:focus-visible {
  z-index: 3;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6:disabled {
  border-color: #B7BBC2;
}

.c9 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  position: relative;
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c9:hover:not(:disabled) {
  background: #DBDEE1;
}

.c9:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c9:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c9:focus-visible {
  z-index: 3;
}

.c9 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c9:disabled {
  border-color: #B7BBC2;
}

.c5 {
  --stepper-segment-background-color: #FFFFFF;
  --stepper-segment-border-color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  isolation: isolate;
  max-width: 100%;
  vertical-align: top;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: transparent;
  border: none;
  overflow: visible;
}

.c5 > *:not(:last-child) {
  border-right: none;
}

.c7 {
  background: #FFFFFF;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius-none,0);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  margin-right: -1px;
  pointer-events: none;
  position: relative;
  width: 3rem;
  z-index: 2;
}

.c7::after {
  background: #CD2C23;
  content: '';
  height: 100%;
  pointer-events: none;
  position: absolute;
  right: -1px;
  top: 0;
  width: 1px;
  z-index: 1;
}

.c7 input {
  pointer-events: auto;
}

.c8 {
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: 100%;
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: left;
  width: 100%;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c8::-webkit-outer-spin-button,
.c8::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c8[type='number'] {
  -moz-appearance: textfield;
}

.c8:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c8:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c8:read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c8:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0 "
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <span
    class="c3"
    data-testid="invalid-field"
    id="uuid1_invalid"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-octagon-alert lucide-alert-octagon c4"
      fill="none"
      focusable="false"
      height="16"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 16h.01"
      />
      <path
        d="M12 8v4"
      />
      <path
        d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
      />
    </svg>
    This field is required
  </span>
  <div
    aria-labelledby="uuid1_label"
    class="c5"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c6"
      data-testid="stepper-button-decrement"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <div
      class="c7"
    >
      <input
        aria-invalid="true"
        class="c8"
        data-testid="stepper-input"
        id="uuid1"
        type="number"
        value="0"
      />
    </div>
    <button
      aria-label="Increase number"
      class="c9"
      data-testid="stepper-button-increment"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (error, mobile) 1`] = `
.c4 {
  color: #CD2C23;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
}

.c5 {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-right: var(--spacing-base);
}

.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #CD2C23;
}

.c0 > :nth-child(2) {
  margin-bottom: var(--spacing-quarter);
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1halfx);
  width: 3rem;
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  position: relative;
  border-left: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 3;
}

.c7:hover:not(:disabled) {
  background: #DBDEE1;
}

.c7:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c7:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c7:focus-visible {
  z-index: 3;
}

.c7 > svg {
  color: inherit;
  height: 1.25rem;
  width: 1.25rem;
}

.c7:disabled {
  border-color: #B7BBC2;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1halfx);
  width: 3rem;
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  position: relative;
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c10:hover:not(:disabled) {
  background: #DBDEE1;
}

.c10:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c10:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c10:focus-visible {
  z-index: 3;
}

.c10 > svg {
  color: inherit;
  height: 1.25rem;
  width: 1.25rem;
}

.c10:disabled {
  border-color: #B7BBC2;
}

.c1 {
  max-width: 100%;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c6 {
  --stepper-segment-background-color: #FFFFFF;
  --stepper-segment-border-color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  isolation: isolate;
  max-width: 100%;
  vertical-align: top;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background-color: transparent;
  border: none;
  overflow: visible;
}

.c6 > *:not(:last-child) {
  border-right: none;
}

.c8 {
  background: #FFFFFF;
  border: 1px solid #CD2C23;
  border-radius: var(--border-radius-none,0);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 3rem;
  margin-right: -1px;
  pointer-events: none;
  position: relative;
  width: 3.25rem;
  z-index: 2;
}

.c8::after {
  background: #CD2C23;
  content: '';
  height: 100%;
  pointer-events: none;
  position: absolute;
  right: -1px;
  top: 0;
  width: 1px;
  z-index: 1;
}

.c8 input {
  pointer-events: auto;
}

.c9 {
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 1rem;
  height: 100%;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-align: left;
  width: 100%;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c9::-webkit-outer-spin-button,
.c9::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c9[type='number'] {
  -moz-appearance: textfield;
}

.c9:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c9:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c9:read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c9:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <span
    class="c4"
    data-testid="invalid-field"
    id="uuid1_invalid"
  >
    <svg
      aria-hidden="true"
      class="lucide lucide-octagon-alert lucide-alert-octagon c5"
      fill="none"
      focusable="false"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 16h.01"
      />
      <path
        d="M12 8v4"
      />
      <path
        d="M15.312 2a2 2 0 0 1 1.414.586l4.688 4.688A2 2 0 0 1 22 8.688v6.624a2 2 0 0 1-.586 1.414l-4.688 4.688a2 2 0 0 1-1.414.586H8.688a2 2 0 0 1-1.414-.586l-4.688-4.688A2 2 0 0 1 2 15.312V8.688a2 2 0 0 1 .586-1.414l4.688-4.688A2 2 0 0 1 8.688 2z"
      />
    </svg>
    This field is required
  </span>
  <div
    aria-labelledby="uuid1_label"
    class="c6"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c7"
      data-testid="stepper-button-decrement"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <div
      class="c8"
    >
      <input
        aria-invalid="true"
        class="c9"
        data-testid="stepper-input"
        id="uuid1"
        type="number"
        value="0"
      />
    </div>
    <button
      aria-label="Increase number"
      class="c10"
      data-testid="stepper-button-increment"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (mobile) 1`] = `
.c3 {
  color: #1B1C1E;
  display: block;
  font-size: 0.875rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c2 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c5 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1halfx);
  width: 3rem;
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-left: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 1;
}

.c5:hover:not(:disabled) {
  background: #DBDEE1;
}

.c5:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c5:focus-visible {
  z-index: 3;
}

.c5 > svg {
  color: inherit;
  height: 1.25rem;
  width: 1.25rem;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 3rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1halfx);
  width: 3rem;
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c7:hover:not(:disabled) {
  background: #DBDEE1;
}

.c7:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c7:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c7:focus-visible {
  z-index: 3;
}

.c7 > svg {
  color: inherit;
  height: 1.25rem;
  width: 1.25rem;
}

.c1 {
  max-width: 100%;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c4 {
  --stepper-segment-background-color: #FFFFFF;
  --stepper-segment-border-color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  isolation: isolate;
  max-width: 100%;
  vertical-align: top;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c6 {
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius-none,0);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 1rem;
  height: 3rem;
  -webkit-letter-spacing: 0.02875rem;
  -moz-letter-spacing: 0.02875rem;
  -ms-letter-spacing: 0.02875rem;
  letter-spacing: 0.02875rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1halfx);
  text-align: left;
  width: 3.25rem;
  z-index: 2;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c6::-webkit-outer-spin-button,
.c6::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c6[type='number'] {
  -moz-appearance: textfield;
}

.c6:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c6:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c6:read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0 c1"
>
  <label
    class="c2 c3"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    aria-labelledby="uuid1_label"
    class="c4"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c5"
      data-testid="stepper-button-decrement"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <input
      aria-invalid="false"
      class="c6"
      data-testid="stepper-input"
      id="uuid1"
      type="number"
      value=""
    />
    <button
      aria-label="Increase number"
      class="c7"
      data-testid="stepper-button-increment"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="20"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Stepper input matches snapshot (read-only) 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c3 {
  background-color: rgb(0 0 0 / 0.03);
  border-radius: var(--border-radius);
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  width: calc(2 * var(--size-2x) + 3rem);
}

.c4 {
  background-color: rgb(0 0 0 / 0.03);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: left;
  width: 100%;
  z-index: 2;
  border: none;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
}

.c4::-webkit-outer-spin-button,
.c4::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4[type='number'] {
  -moz-appearance: textfield;
}

.c4:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c4:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c4:read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

<div
  class="c0 "
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    class="c3"
    data-testid="stepper-input-readonly"
  >
    <input
      aria-invalid="false"
      class="c4"
      data-testid="stepper-input"
      id="uuid1"
      readonly=""
      type="number"
      value="3"
    />
  </div>
</div>
`;

exports[`Stepper input matches snapshot 1`] = `
.c2 {
  color: #1B1C1E;
  display: block;
  font-size: 0.75rem;
  font-weight: var(--font-normal);
  -webkit-letter-spacing: 0.02rem;
  -moz-letter-spacing: 0.02rem;
  -ms-letter-spacing: 0.02rem;
  letter-spacing: 0.02rem;
  line-height: 1.5rem;
  margin: 0;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

input + .c1 {
  margin-left: var(--spacing-half);
}

.c0 {
  margin: 0 0 var(--spacing-3x);
}

.c0 input,
.c0 select,
.c0 textarea {
  border-color: #60666E;
}

.c0 > :nth-child(1) {
  margin-bottom: var(--spacing-quarter);
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-left: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius) 0 0 var(--border-radius);
  z-index: 1;
}

.c4:hover:not(:disabled) {
  background: #DBDEE1;
}

.c4:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c4:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c4:focus-visible {
  z-index: 3;
}

.c4 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  color: #60666E;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: var(--size-2x);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: var(--spacing-1x);
  width: var(--size-2x);
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: 0 var(--border-radius) var(--border-radius) 0;
  z-index: 1;
}

.c6:hover:not(:disabled) {
  background: #DBDEE1;
}

.c6:disabled {
  background: #F1F2F2;
  color: #B7BBC2;
  cursor: not-allowed;
}

.c6:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

.c6:focus-visible {
  z-index: 3;
}

.c6 > svg {
  color: inherit;
  height: var(--size-1x);
  width: var(--size-1x);
}

.c3 {
  --stepper-segment-background-color: #FFFFFF;
  --stepper-segment-border-color: #60666E;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  isolation: isolate;
  max-width: 100%;
  vertical-align: top;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c5 {
  background: var(--stepper-segment-background-color);
  border-bottom: 1px solid var(--stepper-segment-border-color);
  border-left: none;
  border-right: none;
  border-top: 1px solid var(--stepper-segment-border-color);
  border-right: 1px solid var(--stepper-segment-border-color);
  border-radius: var(--border-radius-none,0);
  box-sizing: border-box;
  color: #1B1C1E;
  font-family: inherit;
  font-size: 0.875rem;
  height: var(--size-2x);
  -webkit-letter-spacing: 0.015rem;
  -moz-letter-spacing: 0.015rem;
  -ms-letter-spacing: 0.015rem;
  letter-spacing: 0.015rem;
  line-height: 1.5rem;
  margin: 0;
  outline: none;
  padding: 0 var(--spacing-1x);
  text-align: left;
  width: 3rem;
  z-index: 2;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c5::-webkit-outer-spin-button,
.c5::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c5[type='number'] {
  -moz-appearance: textfield;
}

.c5:disabled {
  background-color: #F1F2F2;
  border-color: #B7BBC2;
  color: #B7BBC2;
}

.c5:-moz-read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c5:read-only {
  background-color: rgb(0 0 0 / 0.03);
  color: #1B1C1E;
}

.c5:focus-visible {
  box-shadow: 0 0 0 2px #006296;
  outline: 2px solid #99C0D5;
  outline-offset: -2px;
}

<div
  class="c0 "
>
  <label
    class="c1 c2"
    for="uuid1"
    id="uuid1_label"
  >
    test
  </label>
  <div
    aria-labelledby="uuid1_label"
    class="c3"
    role="group"
  >
    <button
      aria-label="Decrease number"
      class="c4"
      data-testid="stepper-button-decrement"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-minus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
      </svg>
    </button>
    <input
      aria-invalid="false"
      class="c5"
      data-testid="stepper-input"
      id="uuid1"
      type="number"
      value=""
    />
    <button
      aria-label="Increase number"
      class="c6"
      data-testid="stepper-button-increment"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-plus"
        fill="none"
        focusable="false"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M5 12h14"
        />
        <path
          d="M12 5v14"
        />
      </svg>
    </button>
  </div>
</div>
`;
